# Real-Estate-Data-App

./: .env.example  .gitignore  DATA_ATTRIBUTION.md  README.md  app.py  pyproject.toml  requirements.txt
docs/: GITHUB_LAUNCH.md  SETUP.md
scripts/: download-data.sh  generate-dev-cert.sh  run-dev.sh  run-http3.sh  setup.sh
templates/: index.html
zhvi_dashboard/: __init__.py  __main__.py  charts.py  data.py  routes.py  server.py  settings.py  state_meta.py
